--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       labels: [self-hosted, Windows, X64]
 
     steps:
-      - name: Checkout master branch to ${{ pwd }}
+      - name: Checkout master branch to $pwd
         uses: actions/checkout@v4
 
       - name: Run Katalon Tests
